@startuml new-uml
skinparam nodesep 80
skinparam ranksep 80
skinparam Linetype ortho

    

    package model {
        Movable             <.. Vehicle
        Vehicle             <|-- Saab95
        Vehicle             <|-- Volvo240
        Vehicle             <|-- Scania
        Vehicle             <|-- Hauler
        Vehicle             <|-- Ferry

        Vehicle             *-- Position
        Vehicle             *-- Facing

        Volvo240            *-- Trim
        Saab95              *-- Turbo
        Hauler              *-- Loadable
        Ferry               *-- Loadable
        Loadable            *-- Ramp
        Loadable            *-- Cargo
        Garage              *-- Cargo
        Scania              *-- FlatBed
        Ramp                *-- RampState
        
    }

    package view {
        Window             *-- DrawPanel
        Window             *-- GUIComponents
        DrawPanel          *-- Renderable
    }

    package controller {      
        VehicleController   +-- TimeListener
        Button              *-- Action
        Action              <|.. StartEngine
        Action              <|.. StopEngine
        Action              <|.. Gas
        Action              <|.. Brake
        Action              <|.. EnableTurbo
        Action              <|.. DisableTurbo
        Action              <|.. LiftBed
        Action              <|.. LowerBed
    }

    VehicleController           *-- Vehicle
    Application             *-- Window
    Application             *-- VehicleController
    GUIComponents           *-- Button

    class GUIComponents {
        -controlPanel: JPanel
        -gasPanel: JPanel
        -gasSpinner: JSpinner
        -gasLabel: JLabel
        -gasButton: Button
        -brakeButton: Button
        -turboOnButton: Button
        -turboOffButton: Button
        -liftRampButton: Button
        -lowerRampButton: Button
        -startButton: Button
        -stopButton: Button
    }

    interface Movable {

    }

    /' Position, etc '/

    class Position {
        -x: double
        -y: double
        +setX(double x)
        +setY(double y)
        +getX()
        +getY()
    }

    /' Enums '/

    enum Facing {
        NORTH
        EAST
        SOUTH
        WEST
    }

    enum RampState {
        RAISED
        LOWERED
    }

    /' Vehicle Class '/
    
    abstract Vehicle {
        -modelName: String
        -color: Color
        -position: Position
        -facing: Facing
        -speed: double
        -weight: double
        -enginePower: double

        +startEngine()
        +stopEngine()
        +gas(double amount)
        +brake(double amount)
        +turnLeft()
        +turnRight()
        +move()

        +setModelName(String name)
        +setColor(Color color)
        +setPosition(Position pos)
        +setFacing(Facing facing)
        +setSpeed(double speed)
        +setWeight(double weight)
        +setEnginePower(double power)

        +getModelName()
        +getColor()
        +getPosition()
        +getFacing()
        +getSpeed()
        +getWeight()
        +getEnginePower()
        +getAcceleration()
    }

    /' Vehicles '/

    class Saab95 {
        getAcceleration()
    }

    class Volvo240 {


    }
    class Scania {

    }

    class Hauler{
        -loadable: Loadable
        move()
        loadVehicle()
        unloadVehicle()
    }

    class Ferry {
        -loadable: Loadable
        move()
        loadVehicle()
        unloadVehicle()
    }

    /' Vehicle Components '/

    class Loadable {
        -ramp: Ramp
        -cargo: Cargo

        loadObject(T object)
        unloadObject()
        getContents()
    }

    class Cargo{
        -objects: Deque<T>
        -double capacity

        loadObject(T object)
        unloadObject()
        getContents()
    }

    class Ramp {
        -state: RampState
        raiseRamp()
        lowerRamp()
        getState()
    }

    class Garage {

    }

    class FlatBed {
        -tilt: double
        setTilt(double tilt)
        getTilt()
    }

    class Turbo {
        on()
        off()
        getState()
    }

    class Trim {
        getFactor()
    }

    /' View '/

    class DrawPanel {
        -renderables: ArrayList<Renderable>

        +DrawPanel(int x, int y)
        +paintComponent(Graphics g)
    }

    class VehicleController {
        -delay: int
        -timer: Timer
        - actions: Actions
        -vehicles: ArrayList<Vehicle>
        +VehicleController(Arraylist<Vehicle> vehicles)
        +reverseDirection(Vehicle car)
        +reverseDirectionOnBump(Vehicle car)
        
    }

    class Window <extends JFrame> {
        -X: int
        -Y: int
        -gasAmount: int
        -drawPanel: DrawPanel
        -components: GUIComponents

        -initComponents(String title)
        
    }

    class Renderable {
        -point: Point
        -image: BufferedImage
        +Renderable(Point point, String path)
        setPoint(Position pos)
        setImage(String path)
        getPoint()
        getImage()
    }

    interface Action {
        +perform(ArrayList<Vehicle> vehicles)
    }

    class Application {
        -vehicles: ArrayList<Vehicle>
        -frame: Window
        -controller: VehicleController
        main(String[] args)
        update()
    }

    class Button <extends JButton>{
        -test: String
        -onClick: Action
        +Button(String text, Action onClick)
    }
    

@enduml
